# MiniCascade-RAG

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  setup.py  zqh_test.py
.docker/: Dockerfile.app  Dockerfile.feature_pipeline  pyproject.toml  rabbitmq-init.sh
.github/workflows/: ci.yml  github-actions-demo.yml  main.yml
app/: __init__.py  main.py
app/api/: __init__.py  dependency.py  gradio_chat.py  router.py  test_main.py
app/api/client/: main_client.py
app/api/services/: __init__.py  auth.py  cache.py  demo.py  file_service.py
app/api/v1/: agent_v1.py  chat_v1.py  doc_parse.py  inference_v1.py  insert_v1.py  search_v1.py
app/configs/: __init__.py  agent_config.py  app_config.py  db_config.py  llm_config.py  pipeline_config.py  rag_config.py
app/core/: __init__.py  config.py  lib.py  logger_utils.py  mq.py  opik_utils.py
app/core/agent/graph/: __init__.py  chief_agent.py
app/core/db/: __init__.py  db_services.py  documents.py  mongo.py  postgre.py  qdrant.py
app/core/prompts/: __init__.py  system.md
app/core/rag/: __init__.py  embedding.py  prompt_templates.py  query_expanison.py  query_expansion.py  reranking.py  retriever.py  self_query.py
app/evaluation/: __init__.py
app/evaluation/logs/: multi-turn  multi-turn.json
app/evaluation/multi_turn/: __init__.py  simulation.py
app/libs/: __init__.py  file_utils.py
app/models/: __init__.py  auth.py  base.py  chat.py  chat_message.py  dataset.py  graph.py  model.py  session.py  user.py
app/models/schemas/: chatsession.py  event.py
app/models/table/: __init__.py  chatsession.py
app/pipeline/data_cdc/: cdc.py  config.py  file_parse.py
app/pipeline/feature_pipeline/: config.py  main.py  retriever.py
app/pipeline/inference_pipeline/: config.py  main.py  prompt_templates.py  reasoning.py  sglaunch.py  ui.py  utils.py
app/ui/: chatbot_v1.py  chatbot_v2.py  gradio_chat.py  ui.py
app/utils/: __init__.py  auth.py  graph.py  sanitization.py
test/: wqy
test/evaluation/: test_response.py
test/inference/: reasoning_response.py
test/tools/: test_hybrid_embedding.py
(+34 files in other folders)
