[project]
name = "kunlunrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bytewax>=0.21.1",
    "docling>=2.15.1",
    "fastmcp",
    "flagembedding>=1.3.5",
    "gradio>=5.31.0",
    "httpx[socks]>=0.28.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.18",
    "langchain-tavily>=0.2.1",
    "langgraph>=0.4.8",
    "llama-index>=0.12.37",
    "llama-index-vector-stores-milvus>=0.8.2",
    "notebook>=7.4.3",
    "openevals>=0.1.0",
    "opik>=1.7.28",
    "pika>=1.3.2",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pymilvus>=2.5.10",
    "pymongo>=4.13.0",
    "qdrant-client>=1.14.2",
    "structlog>=25.3.0",
    "unstructured>=0.17.2",
    "vllm>=0.9.1",
]



#
#[[tool.uv.index]]
#url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
#default = true

